--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ html {
 html {
   scroll-behavior: smooth;
 }
+
+
+html, body, #root {
+
+ overflow-x: hidden; /* hide horizontal scroll */
+    overflow-y: auto;   /* allow vertical scroll */
+
+}
